--- a/composer.json
+++ b/composer.json
@@ -10,6 +10,7 @@
         "anhskohbo/no-captcha": "^3.7",
         "laravel/framework": "^11.31",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-sitemap": "^7.3",
         "stripe/stripe-php": "^17.2"
     },
     "require-dev": {
